--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "~TODO~",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
-    "preview": "svelte-kit preview",
-    "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. .",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
-  },
-  "devDependencies": {
-    "@sveltejs/kit": "next",
-    "prettier": "~2.2.1",
-    "prettier-plugin-svelte": "^2.2.0",
-    "svelte": "^3.34.0"
-  },
-  "type": "module",
-  "dependencies": {
-    "mdsvex": "^0.9.8",
-    "rehype-katex": "5",
-    "rehype-raw": "5",
-    "remark-math": "2",
-    "unist-util-visit": "2"
-  }
+	"name": "~TODO~",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "svelte-kit dev",
+		"build": "svelte-kit build",
+		"preview": "svelte-kit preview",
+		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. .",
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+	},
+	"devDependencies": {
+		"@sveltejs/kit": "next",
+		"prettier": "~2.2.1",
+		"prettier-plugin-svelte": "^2.2.0",
+		"svelte": "^3.34.0"
+	},
+	"type": "module",
+	"dependencies": {
+		"katex": "^0.13.18",
+		"mdsvex": "^0.9.8",
+		"rehype-katex": "5",
+		"remark-math": "2",
+		"unist-util-visit": "2"
+	}
 }
